# kb-mono

./: .gitignore  .gitmodules  CHANGELOG.md  GEMINI.md  README.md  artifacts.db  pyproject.toml
_tasks/: Fixing Ingestion and Collection Logic (kb-web v8 Cont.) Conversation Export.md  add_ignore_pattern_filters_to_kb-clipboard.md  alter_kb_web_v6.md  create_quick_scan_mode_for_kb-image.md  update_kb-web_v8.task.md  update_kb_web_v5.task.md
docs/: cleanup_and_normalization_060426.md  clipboard_history_electron_migration_and_uat_standard_053026.md  feature_updates_to_kb_web_060426.md  kb_clipboard_overview.md  kb_core_overview.md  kb_devblog_package_creation_060526.md  kb_image_overview.md  kb_repo_and_kb_vault_package_creation_060526.md  kb_rss-walkthrough.md  kb_rss_implementation_053026.md  kb_web-walkthrough-pt2.md  kb_web-walkthrough.md  kb_web_enrichment_and_browser_extension_053126.md  kb_web_importer_migration_053026.md  kb_web_overview.md  kb_web_service_and_deployment_fixes_053126.md  kb_web_virtual_sites_and_links_v5_060626.md  kb_web_virtual_sites_and_links_v5_adjustment_060726.md  logging_resolution_and_workflow_addition_061826.md  qdrant_and_embeddinggemma_integration.md  remotes_curation_and_branding_updates_060126.md  stateless_auth_refactor_and_concurrency_testing_060526.md  youtube_tooling_and_warning_fixes_060526.md
scratch/: idea.scratch.txt
scripts/: add_agent_note.py  create_issue.py  document_code_issue_and_fix.py  draft_new_pr.py  get_commit_history.py  get_current_statuses.py  get_diffs.py  list_remotes.py  populate_packages.py  publish_pr.py  (+3 more)
(+39 files in other folders)
